src/linear_allocator.h
@@ -8,6 +8,10 @@
 #ifndef MIIC_LINEAR_ALLOCATOR_H
 #define MIIC_LINEAR_ALLOCATOR_H
 
+#ifdef _OPENMP
+#include <omp.h>
+#endif
+
 #include <cassert>
 #include <cstdlib>  // std::malloc, std::free, std::size_t
 #include <memory>   // std::unique_ptr
@@ -56,7 +60,10 @@ class LinearAllocator {
   size_t m_free_space_;
 };
 
-extern thread_local std::unique_ptr<LinearAllocator> li_alloc_ptr;
+extern LinearAllocator* li_alloc_ptr;
+#ifdef _OPENMP
+#pragma omp threadprivate(li_alloc_ptr)
+#endif
 
 template <typename T>
 struct TempStdAllocator {
